# zardy

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml
tests/: test_zardy.py
zardy/lib/: ascii.py  types.py
zardy/lib/ascii/: __init__.py  align.py  ascii.py  sprites.py
zardy/lib/ascii/borders/: border.py  celtic.py
zardy/lib/ascii/fonts/: __init__.py  fonts.py
zardy/lib/borders/: border.py
