[tool.poetry]
name = "zardy"
version = "0.1.0"
description = ""
authors = ["Aaron Ireland <aaron.ireland@leaflink.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyfiglet = "^0.8.post1"
urwid = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
